feat: Add user API endpoint
